[package]
name = "bevy_metalfx"
version = "0.1.0"
edition = "2021"
description = "Bevy plugin for Apple MetalFX upscaling and frame interpolation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mistakeknot/bevy_metalfx"
keywords = ["bevy", "metalfx", "upscaling", "apple", "metal"]
categories = ["game-engines", "rendering", "graphics"]
rust-version = "1.82"
readme = "README.md"

[features]
default = ["spatial"]
spatial = []
temporal = ["spatial"]
frame-interpolation = ["temporal"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_camera",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_window",
] }
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
# wgpu + wgpu-hal for raw Metal device/texture/cmdbuf extraction via as_hal
wgpu = "27"
wgpu-hal = { version = "27", features = ["metal"] }
# foreign-types for metal crate's ForeignType::as_ptr()
foreign-types = "0.5"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObject"] }
objc2-metal = { version = "0.3", features = [
  "MTLDevice",
  "MTLTexture",
  "MTLCommandBuffer",
  "MTLPixelFormat",
] }
objc2-metal-fx = { version = "0.3", features = [
  "MTLFXSpatialScaler",
  "MTLFXTemporalScaler",
  "MTLFXFrameInterpolator",
] }
